[gd_scene load_steps=16 format=3 uid="uid://dcqibluajqe5t"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_hm77f"]
[ext_resource type="Shader" path="res://assets/shader/start_screen.gdshader" id="2_5eut6"]
[ext_resource type="Texture2D" uid="uid://w0rqp86whhnx" path="res://assets/sprites/back.png" id="3_csv6s"]
[ext_resource type="Script" path="res://scripts/panel.gd" id="4_cqgdu"]
[ext_resource type="Theme" uid="uid://cnnrcqluok6ds" path="res://assets/themes/basic_button.tres" id="5_mx3ny"]
[ext_resource type="FontFile" uid="uid://lrf64dpg6qa5" path="res://assets/fonts/PixelOperator8.ttf" id="6_7k7ob"]
[ext_resource type="Texture2D" uid="uid://ba0x3d3x057qk" path="res://assets/sprites/ginge/GRONK2 UI.png" id="7_sh3ev"]
[ext_resource type="FontFile" uid="uid://bya20bd0ol5c1" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="8_r3nts"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_27hve"]
shader = ExtResource("2_5eut6")
shader_parameter/offset = Vector2(0, 0)
shader_parameter/scroll_texture = ExtResource("3_csv6s")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bpted"]
texture = ExtResource("7_sh3ev")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(0, 48, 24, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nk0tt"]
texture = ExtResource("7_sh3ev")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(24, 24, 24, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xj6wk"]
texture = ExtResource("7_sh3ev")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(48, 24, 24, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fq004"]
texture = ExtResource("7_sh3ev")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(0, 24, 24, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a5gtp"]
texture = ExtResource("7_sh3ev")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(48, 24, 24, 24)

[sub_resource type="Theme" id="Theme_ccp5a"]
default_font = ExtResource("6_7k7ob")
Button/fonts/font = ExtResource("6_7k7ob")
Button/styles/disabled = SubResource("StyleBoxTexture_bpted")
Button/styles/hover = SubResource("StyleBoxTexture_nk0tt")
Button/styles/hover_pressed = SubResource("StyleBoxTexture_xj6wk")
Button/styles/normal = SubResource("StyleBoxTexture_fq004")
Button/styles/pressed = SubResource("StyleBoxTexture_a5gtp")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hm77f")

[node name="Background" type="Panel" parent="."]
material = SubResource("ShaderMaterial_27hve")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_cqgdu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = 79.0
offset_right = 123.0
offset_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_mx3ny")
theme_override_fonts/font = ExtResource("6_7k7ob")
theme_override_font_sizes/font_size = 16
text = "Start Game"

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_mx3ny")
theme_override_fonts/font = ExtResource("6_7k7ob")
theme_override_font_sizes/font_size = 16
text = "Options"

[node name="ButtonExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_ccp5a")
theme_override_fonts/font = ExtResource("6_7k7ob")
theme_override_font_sizes/font_size = 16
text = "Exit "

[node name="TitleCard" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -418.0
offset_top = 86.0
offset_right = 419.0
offset_bottom = 214.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="TitleCard"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.0
offset_top = -16.0
offset_right = 374.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_r3nts")
theme_override_font_sizes/font_size = 32
text = "GRONK 2: ELECTRIC BOOGALOO"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonExit" to="." method="_on_play_button_pressed"]
